--- a/field_ring_optimizer/requirements.txt
+++ b/field_ring_optimizer/requirements.txt
@@ -1,6 +1,6 @@
 DeepXDE==1.9.2
 matplotlib==3.10.6
-numpy==2.3.3
+numpy==2.2.3
 pandas==2.3.2
-scipy==1.16.2
-torch==2.7.0+cu128
+scipy==1.15.3
+torch==2.7.0
